--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             (n.className += t + "touch");
       })(window, document);
     </script>
-    <link href="1.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="1.png" rel="apple-touch-icon" />
+    <link href="/images/logo.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="/images/logo.png" rel="apple-touch-icon" />
   </head>
   <body>
     <section class="section wf-section">
@@ -113,7 +113,7 @@
           <a
             href="https://app.uniswap.org/#/swap?outputCurrency=0x00000000000000000000000000000"
             class="button header w-button"
-            >BUY $ELON</a
+            >BUY NOW</a
           >
         </div>
         <div class="div-block-18">
@@ -160,7 +160,7 @@
           <img src="2.jpeg" loading="lazy" width="368" alt="" class="image-9" />
           <!-- <h1 class="heading-2 main">$ELON</h1> -->
           <img src="/images/fnt.png" alt="" />
-          <9
+          <p
             style="
               text-align: center;
               color: #f9f9f9;
@@ -169,7 +169,7 @@
             "
           >
            
-          </9>
+          </p>
 
           <div>
             <div class="div-block-25">
