logo added for mobile

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="div-block-21">
         <div class="div-block-20">
           <img
-            src="logo-main.jpeg"
+            src="/images/logo.png"
             loading="lazy"
             width="80"
             alt=""
