--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  data-wf-domain="$ELON-coin.webflow.io"
+  data-wf-domain="$DogWif-coin.webflow.io"
   data-wf-page="648c8ad3f43c3e327adf6db4"
   data-wf-site="648c8ad3f43c3e327adf6db7"
 >
@@ -52,12 +52,13 @@
     <section class="section wf-section">
       <div class="div-block-20">
         <img
+        
           src="/images/logo.png"
           loading="lazy"
           width="80"
           alt=""
           class="image-2"
-          style="width: 120px"
+          style="width: 80px; border-radius: 50%;"
         />
         <div class="div-block-18">
           <a
@@ -96,6 +97,7 @@
             loading="lazy"
             width="80"
             alt=""
+            style="border-radius: 15px;"
             class="image-2"
           />
         </div>
@@ -131,7 +133,7 @@
       <div class="div-block">
         <div class="div-block-13">
           <img
-          style="width: 550px;"
+          style="width: 550px; border-radius: 15px;"
             src="/images/man.jpg"
             loading="lazy"
             
@@ -141,8 +143,8 @@
         </div>
         <div class="div-block-2">
           <img src="2.jpeg" loading="lazy" width="368" alt="" class="image-9" />
-          <!-- <h1 class="heading-2 main">$ELON</h1> -->
-          <img style="width: 450px ; height: 400px;" src="/images/fnt.png" alt="" />
+          <!-- <h1 class="heading-2 main">$DogWif</h1> -->
+          <img style="width: 450px ; height: 400px; border-radius: 15px;" src="/images/fnt.png" alt="" />
           <p
             style="
               text-align: center;
@@ -226,10 +228,10 @@
             <p class="paragraph">
              The name of the most bullish meme coin in the space right now: 
 
-Elon6900. 
+DogWif. 
 
-It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent approval on the next generation of bag pumping utility, that have both huge military and civilian applications now..</p><p class="paragraph">Right now, John, the Elon9600 $Elon trades over-the-counter at 10 cents a share.  And by the way, John, our analysts indicate it could go a heck of a lot higher than that. </p>
-<p class="paragraph">Your profit on a mere 0.1 eth investment would be upwards of 100,000 eth!</p>
+It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent approval on the next generation of bag pumping utility, that have both huge military and civilian applications now..</p><p class="paragraph">Right now, John, the $DogWif trades over-the-counter at 10 cents a share.  And by the way, John, our analysts indicate it could go a heck of a lot higher than that. </p>
+
             </p>
           </div>
 
@@ -278,7 +280,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
         </div>
         <div>
           <div class="div-block-7 token">
-            <h1 class="heading-2">Supply: 21,000,000</h1>
+            <h1 class="heading-2">Supply: 10 Million</h1>
           </div>
           <div class="div-block-7 token">
             <h1 class="heading-2">Buy/Sell Tax: 0%</h1>
@@ -399,13 +401,13 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
               >
                 <div class="road_card">
                   <h3 class="fs-5 font-medium text-white my-3">LAUNCH</h3>
-                  <img src="/images/logo.png" class="road_img" alt="" />
+                  <img style="border-radius: 50%;" src="/images/logo.png" class="road_img" alt="" />
                   <h2 class="fs-3 font-semibold text-white my-3">Phase 1</h2>
                   <ul class="p-0 m-0 road_list">
                     <li>Uniswap Launch</li>
                     <li>The Inception of the Idea</li>
                     <li>Community Forming</li>
-                    <li> Send Elon6900 to the moon </li>
+                    <li> Send DogWif to the moon </li>
                     <li>Onboarding of Telegram and Twitter promoters</li>
                   </ul>
                 </div>
@@ -417,7 +419,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
               >
                 <div class="road_card">
                   <h3 class="fs-5 font-medium text-white my-3">MARKETING</h3>
-                  <img src="/images/logo.png"  class="road_img" alt="" />
+                  <img style="border-radius: 50%;" src="/images/logo.png"  class="road_img" alt="" />
                   <h2 class="fs-3 font-semibold text-white my-2">Phase 2</h2>
                   <ul class="p-0 m-0 road_list">
                     <li>Website Upgrade</li>
@@ -437,7 +439,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
                   <h3 class="fs-5 font-medium text-white my-3">
                     THE PAST AWAKENS
                   </h3>
-                  <img src="/images/logo.png"  class="road_img" alt="" />
+                  <img style="border-radius: 50%;" src="/images/logo.png"  class="road_img" alt="" />
                   <h2 class="fs-3 font-semibold text-white my-2">Phase 3</h2>
                   <ul class="p-0 m-0 road_list">
                     <li>Strategical Partnerships</li>
@@ -477,7 +479,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
         </div>
         <div class="div-block-7">
           <h1 class="heading-2">
-            Connect with $ELON<span class="text-span-3"></span>
+            Connect with $DogWif<span class="text-span-3"></span>
           </h1>
           <h3 class="heading-3-copy">
             We invite you to join our
@@ -527,7 +529,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
             class="image-7"
           />
         </div>
-        <div class="text-block-2" style="color:#f9f9f9;padding-bottom:60px">© 2023 by elon6900. All rights reserved!</div>
+        <div class="text-block-2" style="color:#f9f9f9;padding-bottom:60px">© 2023 by DogWif. All rights reserved!</div>
       </div>
     </section> 
     <div class="div-block-22">
