--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
       <div class="div-block-5">
        
         <img
-          src="/images/1.jpg"
+          src="/images/wif.jpg"
           loading="lazy"
           width="255"
           alt=""
@@ -305,13 +305,13 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
           alt=""
           class="image-6"
         /><img
-            src="/images/3.jpg"
+            src="/images/wif2.jpg"
           loading="lazy"
           width="247"
           alt=""
           class="egg"
         /><img
-            src="/images/4.jpg"
+            src="/images/wif3.jpg"
           loading="lazy"
           width="343"
           alt=""
@@ -362,7 +362,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
             alt=""
             class="image-6"
           /><img
-              src="/images/11.jpg"
+              src="/images/wif3.jpg"
             loading="lazy"
             width="247"
             alt=""
@@ -526,6 +526,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
             loading="lazy"
             width="169"
             alt=""
+            style="border-radius: 15ppx;"
             class="image-7"
           />
         </div>
@@ -533,7 +534,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
       </div>
     </section> 
     <div class="div-block-22">
-      <img src="/images/logo.png" loading="lazy" alt="" />
+      <img style="border-radius: 15ppx;" src="/images/logo.png" loading="lazy" alt="" />
     </div>
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=648c8ad3f43c3e327adf6db7"
