--- a/index.html
+++ b/index.html
@@ -225,12 +225,15 @@
           <div class="div-block-19"></div>
           <div class="div-block-3">
             <h1 class="heading-2">ABOUT US</h1>
-            <p class="paragraph">
+            <p style="
+            font-family: Pokemon Solid, sans-serif;" class="paragraph">
              The name of the most bullish meme coin in the space right now: 
 
 DogWif. 
 
-It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent approval on the next generation of bag pumping utility, that have both huge military and civilian applications now..</p><p class="paragraph">Right now, John, the $DogWif trades over-the-counter at 10 cents a share.  And by the way, John, our analysts indicate it could go a heck of a lot higher than that. </p>
+It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent approval on the next generation of bag pumping utility, that have both huge military and civilian applications now..</p>
+<p  class="paragraph">
+Right now, John, the $DogWif trades over-the-counter at 10 cents a share.  And by the way, John, our analysts indicate it could go a heck of a lot higher than that. </p>
 
             </p>
           </div>
@@ -378,7 +381,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
       </div>
     </section>
      <!-- roadmap section start -->
-        <section class="roadmap_sec">
+        <!-- <section class="roadmap_sec">
           <div class="container">
             <div
               class="col-md-12 text-center wow fadeInUp animated mb-5 pt-3"
@@ -390,7 +393,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
             >
               <h2 style="color:#fff;font-size: 50px;font-weight: 500;">Roadmap</h2>
               <div class="space-border" style="background-size: cover"></div>
-              <!-- roadmap card -->
+         
             </div>
 
             <div class="row mt-5 pt-3">
@@ -450,27 +453,10 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
                   </ul>
                 </div>
               </div>
-              <!-- <div class="col-md-3">
-            <div class="road_card">
-              <h3 class="fs-5 font-medium text-white my-2">THE PAST AWAKENS</h3>
-              <img
-                src="/data/betlogo.png"
-                class="road_img"
-                alt=""
-              />
-              <h2 class="fs-3 font-semibold text-white my-2">Phase 4</h2>
-              <ul class="p-0 m-0">
-                <li>Strategical Partnerships</li>
-                <li>YouTube & TikTok Exposure</li>
-                <li>Back to True Decentralization</li>
-                <li>The Future In The Past</li>
-                <li>Roadmap V2</li>
-              </ul>
-            </div>
-          </div> -->
+              
             </div>
           </div>
-        </section>
+        </section> -->
         <!-- roadmap section end -->
     <!-- <section class="section-4 wf-section">
       <div class="container-2 w-container">
