--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@ Right now, John, the $DogWif trades over-the-counter at 10 cents a share.  And b
             class="egg"
           />
 
-          <img
+          <!-- <img
             src="images/womm.jpg"
             loading="lazy"
             width="343"
             alt=""
             class="image-14"
-            />
+            /> -->
           <img
             src="images/sd1.jpg"
             loading="lazy"
@@ -330,7 +330,7 @@ Right now, John, the $DogWif trades over-the-counter at 10 cents a share.  And b
       </div>
       <div class="div-block-5">
         <img
-             src="/images/5.jpg"
+             src="/images/wif3.jpg"
           loading="lazy"
           width="255"
           alt=""
@@ -371,13 +371,15 @@ Right now, John, the $DogWif trades over-the-counter at 10 cents a share.  And b
             width="584"
             alt=""
             class="image-6"
-          /><img
+          />
+          <!-- <img
               src="/images/wif3.jpg"
             loading="lazy"
             width="247"
             alt=""
             class="egg"
-          /><img
+          /> -->
+          <img
                src="/images/12.jpg"
             loading="lazy"
             width="343"
